--- a/src/index.css
+++ b/src/index.css
@@ -31,14 +31,18 @@ body {
   /* place-items: center; */
   min-width: 320px;
   min-height: 100vh;
-  margin-bottom:50px;
+  margin-bottom:20px;
 }
 
 h1 {
-  font-size: 3.2em;
+  font-size: 3em;
   line-height: 1.1;
 }
-
+h2 {
+    font-size: 1.5em;
+    line-height: 1.1;
+    margin-top: 0;
+  }
 button {
   border-radius: 8px;
   border: 1px solid transparent;
@@ -271,10 +275,10 @@ footer {
     color: #161616;
     text-decoration: underline;
     font-weight: 600;
-} */
+} 
 .van-list-container {
-    /* padding-inline: 23px; */
-}
+    padding-inline: 23px;
+}*/
 .van-list-filter-buttons {
     display: flex;
     flex-wrap: wrap;
@@ -383,13 +387,14 @@ i[class*='van-type-'] {
 }
 
 .van-detail img {
+    width: 100%;
     border-radius: 5px;
     margin-block: 47px;
 }
 
 .van-detail h2 {
     font-size: 2rem;
-    margin-bottom: 10px;
+    margin: 10px 0;
 }
 
 .van-detail > i {
@@ -398,7 +403,7 @@ i[class*='van-type-'] {
 
 .van-detail .van-price {
     font-size: 1.25rem;
-    margin-bottom: 10px;
+    margin: 5px 0;
 }
 
 .van-detail .van-price span {
@@ -443,6 +448,7 @@ i[class*='van-type-'] {
     margin-bottom: 15px;
     padding-block: 18px;
     padding-left: 24px;
+    padding-right: 24px;
 }
 
 .host-van-single > img {
@@ -450,7 +456,9 @@ i[class*='van-type-'] {
     border-radius: 5px;
     margin-right: 17px;
 }
-
+.host-van-info{
+    margin-right:auto;
+}
 .host-van-info h3 {
     font-size: 20px;
     font-weight: 600;
@@ -473,7 +481,6 @@ i[class*='van-type-'] {
     padding-bottom:20px;
 }
 .host-van-detail > img{
-    height: 140px;
     border-radius: 5px;
     margin-right: 17px;
 }
@@ -497,6 +504,7 @@ i[class*='van-type-'] {
     line-height: 21px;
     margin:10px;
 }
+
 .host-van-detail-info > h4 > span {
     font-weight: 500;
 }
@@ -519,18 +527,254 @@ i[class*='van-type-'] {
     display:flex;
     flex-direction:column;
 }
-.error-container a{
-    display: inline-block;
-    text-align: center;
-    text-decoration: none;
-    background-color: #2b2724;
-    border: none;
+
+.error-container .link-button {
     width: 100%;
-    margin-top: 27px;
-    padding-block: .75rem;
+    background-color: #161616;
     color: white;
+}
+
+
+.login-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-inline: 27px;
+}
+
+.login-form {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    max-width: 500px;    
+}
+
+.login-form > input {
+    border: 1px solid rgba(209, 213, 219);
+    height: 40px;
+    margin: 5px 0;
+    text-indent: 10px;
+    font-family: "Inter", sans-serif;
+    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.05);
+    font-weight: 400;
+}
+.login-form > input:focus {
+    outline: none;
+}
+
+.login-form > input:first-of-type {
+    border-radius: 6px 6px 0px 0px;
+}
+
+.login-form > input:last-of-type {
+    border-radius: 0px 0px 6px 6px;
+    border-top: none;
+}
+
+.login-form > button {
+    background-color: #FF8C38;
+    border: none;
+    border-radius: 6px;
+    height: 55px;
+    margin-top: 10px;
+    color: white;
+    font-family: "Inter", sans-serif;
+}
+.red {
+    color: #cc0000;
+}
+
+.host-dashboard-earnings {
+    background-color: #ffead0;
+    padding: 37px 26px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.host-dashboard-earnings > .info > h1 {
+    font-size: 36px;
+    color: #161616;
+    margin: 0;
+}
+
+.host-dashboard-earnings > .info > p {
+    color: #4d4d4d;
+}
+
+.host-dashboard-earnings > .info > p > span {
+    text-decoration: underline;
+    font-weight: bold;
+}
+
+.host-dashboard-earnings > .info > h2 {
+    margin: 0;
+    font-size: 38px;
+    color: #161616;
+    font-weight: 900;
+}
+
+.host-dashboard-reviews {
+    background-color: #ffddb2;
+    padding: 25px 26px;
+    display: flex;
+    align-items: center;
+}
+
+.host-dashboard-reviews > h2 {
+    margin: 0;
+}
+
+.host-dashboard-reviews .star {
+    color: #ff8c38;
+    margin-left: 15px;
+    font-size: 25px;
+}
+
+.host-dashboard-reviews p {
+    margin-left: 5px;
+    font-size: 20px;
+    color: #4d4d4d;
+    margin-right: auto;
+}
+
+.host-dashboard-reviews p > span {
+    font-weight: bold;
+    color: #161616;
+}
+
+.host-dashboard-vans {
+    padding: 38px 26px;
+}
+
+.host-dashboard-vans > .top {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.host-dashboard-vans .host-vans-list {
+    padding-inline: 0;
+}
+
+.host-income {
+    padding-inline: 26px;
+    color: #161616;
+}
+
+.host-income > p {
+    color: #4d4d4d;
+}
+
+.host-income > p span {
+    text-decoration: underline;
+    font-weight: bold;
+}
+
+.host-income > h2 {
+    font-size: 38px;
+    color: #161616;
+    font-weight: 900;
+}
+
+img.graph {
+    width: 100%;
+    max-width: 500px;
+}
+
+.host-income .info-header > p {
+    color: #4d4d4d;
+}
+
+.host-income .info-header > p span {
+    text-decoration: underline;
+    font-weight: bold;
+}
+
+.host-income .info-header > h3 {
     font-weight: 700;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: transform .1s ease-in-out;
+    font-size: 24px;
+    margin-top: 60px;
+}
+
+.host-income .transaction {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: white;
+    margin-bottom: 31px;
+    padding: 35px 29px;
+    border-radius: 6px;
+}
+.host-income .transaction > h3 {
+    font-size: 36px;
+    font-weight: 600;
+    margin: 0;
+}
+
+.host-income .transaction > p {
+    font-weight: 500;
+    font-size: 20px;
+    color: #4d4d4d;
+}
+
+.host-reviews {
+    padding-inline: 26px;
+    color: #161616;
+}
+
+.host-reviews .top-text {
+    display: flex;
+    align-items: center;
+    margin-bottom: 32px;
+}
+
+.host-reviews .top-text > h2 {
+    font-weight: 700;
+    font-size: 32px;
+    margin: 0;
+    margin-right: 20px;
+}
+
+.host-reviews .top-text > p {
+    margin: 0;
+    color: #4d4d4d;
+}
+
+.host-reviews .top-text > p span {
+    text-decoration: underline;
+    font-weight: bold;
+}
+
+.host-reviews > img {
+    margin-bottom: 36px;
+}
+
+.host-reviews .review {
+    margin-block: 25px;
+}
+
+.host-reviews .review .info {
+    display: flex;
+}
+
+.host-reviews .review .name {
+    color: #161616;
+    margin-right: 10px;
+    font-weight: 600;
+}
+
+.host-reviews .review .date {
+    color: #8c8c8c;
+}
+
+.host-reviews hr {
+    background-color: #c7c7c7;
+    height: 1px;
+    border: 0;
+}
+
+.host-reviews .review-star {
+    color: #ff8c38;
+    margin-right: 5px;
 }
